--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,11 +5,12 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: docs/conf.py
-
+  builder: html
+  configuration: conf.py
+  fail_on_warning: true
 # Build documentation with MkDocs
 #mkdocs:
 #  configuration: mkdocs.yml
 
 # Optionally build your docs in additional formats such as PDF and ePub
-formats: all
+formats: html
