add conf file for readthedocs

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,4 +13,5 @@ sphinx:
 #  configuration: mkdocs.yml
 
 # Optionally build your docs in additional formats such as PDF and ePub
-formats: html
+formats: []
+
